--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
     "mysql2": "^1.5.2",
-    "sequelize": "^4.33.4"
+    "sequelize": "^4.33.4",
+    "sequelize-cli": "^4.0.0"
   }
 }
